--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>JavaScript Lab</title>
   </head>
 
-  <body>
-    <script src="index.js"></script>
+  <body id="body">
+    <script src="./index.js"></script>
   </body>
 
 </html>
